@@ -3,7 +3,10 @@ from Products.Five.browser.pagetemplatefile import ZopeTwoPageTemplateFile
 from datetime import datetime
 from opencore.browser.base import BaseView
 from opencore.utility.interfaces import IEmailSender
+from pprint import pformat
+import os
 import urlparse
+
 
 class ErrorView(BaseView):
 
@@ -40,6 +43,31 @@ class ErrorView(BaseView):
         self.request_time = str(datetime.now())
         if kw['error_type'] == 'NotFound':
             return self.notfound(*args, **kw)
+
+        if 'SUPERVISOR_ENABLED' in os.environ:
+            method = self.request.environ['REQUEST_METHOD']
+            if method == "POST":
+                args = "POST arguments: " % pformat(request.form)
+            else:
+                args = ""
+            username = self.request.get('use_logged_in_user', 'anonymous')
+            print """<!--XSUPERVISOR:BEGIN-->
+Content-Type: text/plain
+Username: %s
+Request-url: %s
+Method: %s
+
+Environment: %s
+
+%s
+
+Traceback: %s
+<!--XSUPERVISOR:END-->""" % (username, 
+                             self.request.ACTUAL_URL,
+                             method,
+                             pformat(self.request.environ),
+                             args,
+                             self.traceback)
         return self.error(*args, **kw)
 
 class ErrorReporter(BaseView):
